Bug #31525 Incorrect handling of ActiveMissed_2, potential "Lost node group" after SR
Submitted: 11 Oct 2007 11:49 Modified: 6 Nov 2007 10:15
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:Any
Assigned to: Jonas Oreland Target Version:

[11 Oct 2007 11:49] Jonas Oreland
Description:
.

How to repeat:
.

Suggested fix:
.
[11 Oct 2007 14:54] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/35349

ChangeSet@1.2521, 2007-10-11 14:54:05+02:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#31525
    Fix bug regarding node that missed 2 LCP's (that was not included in next LCP after
SR)
[11 Oct 2007 15:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/35361

ChangeSet@1.2160, 2007-10-11 15:24:05+02:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#31525 (recommit to drop6)
    Fix bug regarding node that missed 2 LCP's (that was not included in next LCP after
SR)
[14 Oct 2007 18:37] Jonas Oreland
pushed to 5.1-ndb, telco-6.1, telco-6.2, telco-6.3 & 51-telco
[15 Oct 2007 19:33] Jon Stephens
Documented bugfix in mysql-5.1.22-ndb-6.3.4 changelog. Left in PQ status.
[5 Nov 2007 14:53] Bugs System
Pushed into 6.0.4-alpha
[5 Nov 2007 14:57] Bugs System
Pushed into 5.1.23-rc
[6 Nov 2007 10:15] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Also documented bugfix in 5.1.15-ndb-6.1.22, 5.1.22-ndb-6.2.7, 5.1.23, and 6.0.4
changelogs; closed.