ndb - bug#31525   Fix bug regarding node that missed 2 LCP's (that was not included in next LCP after SR)